unpackaged/main/default/objects/User_Movement__c/User_Movement__c.object-meta.xml
<CustomObject>
    <label>User Movement</label>
    <nameField>
        <displayFormat>UM-{0000}</displayFormat>
        <label>User Movement Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Movements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>