unpackaged/main/default/objects/User_Movement__c/fields/Action_Date__c.field-meta.xml
<CustomField>
    <fullName>Action_Date__c</fullName>
    <label>Action Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>