unpackaged/main/default/objects/User_Movement__c/fields/Manager_From__c.field-meta.xml
<CustomField>
    <fullName>Manager_From__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Manager From</label>
    <referenceTo>User</referenceTo>
    <relationshipName>User_Movements1</relationshipName>
    <type>Lookup</type>
</CustomField>