unpackaged/main/default/objects/User_Movement__c/fields/Manager_To__c.field-meta.xml
<CustomField>
    <fullName>Manager_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Manager To</label>
    <referenceTo>User</referenceTo>
    <relationshipName>User_Movements2</relationshipName>
    <type>Lookup</type>
</CustomField>