unpackaged/main/default/objects/User_Movement__c/fields/Submitted_By_Role__c.field-meta.xml
<CustomField>
    <fullName>Submitted_By_Role__c</fullName>
    <label>Submitted By Role</label>
    <length>80</length>
    <type>Text</type>
</CustomField>