unpackaged/main/default/objects/User_Movement__c/fields/Target_User__c.field-meta.xml
<CustomField>
    <fullName>Target_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Target User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>User_Movements</relationshipName>
    <type>Lookup</type>
</CustomField>