unpackaged/main/default/objects/User_Movement__c/fields/Target_User_Role__c.field-meta.xml
<CustomField>
    <fullName>Target_User_Role__c</fullName>
    <label>Target User Role</label>
    <length>80</length>
    <type>Text</type>
</CustomField>