unpackaged/main/default/objects/User_Movement__c/fields/Update_Manager__c.field-meta.xml
<CustomField>
    <fullName>Update_Manager__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Update Manager?</label>
    <type>Checkbox</type>
</CustomField>