unpackaged/main/default/objects/User_Movement__c/fields/Update_Role__c.field-meta.xml
<CustomField>
    <fullName>Update_Role__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Update Role?</label>
    <type>Checkbox</type>
</CustomField>